# privacy-policy-analyzer

./: .env.example  README.md  RESULTS.md  pyproject.toml
.github/workflows/: ci.yaml  docs.yml  release.yml
docs/: contributing.md  user-guide.md
src/: main.py
